[package]
name = "sentinel-modsec"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-modsec"
homepage = "https://sentinel.raskell.io"
documentation = "https://sentinel.raskell.io/docs/sentinel-modsec"
description = "Pure Rust ModSecurity implementation with full OWASP CRS compatibility"
keywords = ["modsecurity", "waf", "security", "owasp", "crs"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "sentinel_modsec"
path = "src/lib.rs"

[[bin]]
name = "sentinel-modsec"
path = "src/main.rs"

[dependencies]
# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# IP address matching
ipnetwork = "0.20"

# Hashing (for md5/sha1/sha2 transformations)
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# HTML entity decoding
html-escape = "0.2"

# Base64 encoding/decoding
base64 = "0.22"

# URL encoding/decoding
percent-encoding = "2.3"

# File globbing
glob = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Thread-safe collections
dashmap = "6.1"
parking_lot = "0.12"

# Lazy initialization
once_cell = "1.19"

# Optional: geolocation
maxminddb = { version = "0.24", optional = true }

[features]
default = []
geo = ["maxminddb"]

[dev-dependencies]
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
criterion = "0.5"
proptest = "1.6"

# [[bench]]
# name = "rule_matching"
# harness = false

# [[test]]
# name = "parser"
# path = "tests/parser_tests.rs"

# [[test]]
# name = "crs"
# path = "tests/crs_compatibility.rs"
