[package]
name = "zentinel-modsec"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
authors = ["Zentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-modsec"
homepage = "https://zentinelproxy.io"
documentation = "https://zentinelproxy.io/docs/zentinel-modsec"
description = "Pure Rust ModSecurity implementation with full OWASP CRS compatibility"
keywords = ["modsecurity", "waf", "security", "owasp", "crs"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "zentinel_modsec"
path = "src/lib.rs"

[[bin]]
name = "zentinel-modsec"
path = "src/main.rs"

[dependencies]
# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# IP address matching
ipnetwork = "0.21"

# Hashing (for md5/sha1/sha2 transformations)
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# HTML entity decoding
html-escape = "0.2"

# Base64 encoding/decoding
base64 = "0.22"

# URL encoding/decoding
percent-encoding = "2.3"

# File globbing
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Lazy initialization
once_cell = "1.19"

# Perfect hash function for fast lookups
phf = { version = "0.13", features = ["macros"] }

# Optional: geolocation
maxminddb = { version = "0.27", optional = true }

[features]
default = []
geo = ["maxminddb"]
# Enable comparison benchmarks against libmodsecurity (requires libmodsecurity installed)
libmodsec-compare = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "modsec_bench"
harness = false

[[bench]]
name = "libmodsec_compare"
harness = false
required-features = ["libmodsec-compare"]
